little bit of stylizing for options page

--- a/app/options.html
+++ b/app/options.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head><title>distract-overflow</title></head>
+<head>
+	<title>distract-overflow</title>
+	<link rel="stylesheet" type="text/css" href="options.css">
+</head>
+
 <body>
+	<div id="banner">
+	</div>
 
-<h3>Hide the following elements when active:</h3>
-<label>
-  <input type="checkbox" id="hideHotNetworkQuestions"> Hot Network Questions <br/>
-  <input type="checkbox" id="hideHireMe"> Hire Me <br/>
-  <input type="checkbox" id="hideCommunityBulletin"> Community Bulletin <br/>
-  <input type="checkbox" id="hideNewsletterAd"> Newsletter Ad <br/>
-  <input type="checkbox" id="hideChatFeature"> Chat Feature <br/>
-</label>
-<br/>
-
-<button id="save">Save</button>
-
-<script src="options.js"></script>
+	<div id="content">
+		<h3>Hide the following elements when active:</h3>
+		<label>
+		  <input type="checkbox" id="hideHotNetworkQuestions"> Hot Network Questions <br/>
+		  <input type="checkbox" id="hideHireMe"> Hire Me <br/>
+		  <input type="checkbox" id="hideCommunityBulletin"> Community Bulletin <br/>
+		  <input type="checkbox" id="hideNewsletterAd"> Newsletter Ad <br/>
+		  <input type="checkbox" id="hideChatFeature"> Chat Feature <br/>
+		</label>
+		<br/>
+		<button id="save">Save</button>
+	</div>
+	
+	<script src="options.js"></script>
 </body>
 </html>
